# sokoban

./: Cargo.toml  readme.md
.github/workflows/: ci.yaml
resources/maps/: map00
src/: a_star.rs  dfs.rs  lib.rs  manual.rs
