[package]
name = "sokoban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "*"
itertools = "*"
lazy_static = "*"

[[bin]]
name = "manual"
path = "src/manual.rs"

[[bin]]
name = "dfs"
path = "src/dfs.rs"

[[bin]]
name = "astar"
path = "src/a_star.rs"